manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go-app-service
spec:
  selector:
    app: hello-go-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
