manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-go-app
spec:
  hosts:
  - "*"
  gateways:
  - hello-go-app-gateway
  http:
  - route:
    - destination:
        host: hello-go-app-service
        port:
          number: 80
